project name change

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.codehaus.mojo</groupId>
-    <artifactId>my-project</artifactId>
+    <artifactId>algo-tests</artifactId>
     <version>1.0</version>
 
     <properties>
